limit checkbox selection to 3 for top 3 goals

--- a/index.html
+++ b/index.html
@@ -303,57 +303,60 @@
         <label><strong>What are your goals? (Choose your top 3)</strong></label>
         <div class="check-container">
           <div class="form-check">
-            <input name="goals" id="check1" class="form-check-input" type="checkbox" value="look-more-muscular" />
+            <input name="goals" id="check1" class="form-check-input top3" type="checkbox" value="look-more-muscular" />
             <label class="form-check-label" for="check1">Look more muscular</label>
           </div>
           <div class="form-check">
-            <input name="goals" id="check2" class="form-check-input" type="checkbox" value="improve-endurance" />
+            <input name="goals" id="check2" class="form-check-input top3" type="checkbox" value="improve-endurance" />
             <label class="form-check-label" for="check2">Improve endurance</label>
           </div>
           <div class="form-check">
-            <input name="goals" id="check3" class="form-check-input" type="checkbox" value="have-more-energy" />
+            <input name="goals" id="check3" class="form-check-input top3" type="checkbox" value="have-more-energy" />
             <label class="form-check-label" for="check3">Have more energy</label>
           </div>
           <div class="form-check">
-            <input name="goals" id="check4" class="form-check-input" type="checkbox" value="build-muscle-strength" />
+            <input name="goals" id="check4" class="form-check-input top3" type="checkbox"
+              value="build-muscle-strength" />
             <label class="form-check-label" for="check4">Build muscle strength</label>
           </div>
           <div class="form-check">
-            <input name="goals" id="check5" class="form-check-input" type="checkbox"
+            <input name="goals" id="check5" class="form-check-input top3" type="checkbox"
               value="improve-mobility/flexibility" />
             <label class="form-check-label" for="check5">Improve mobility / flexibilty</label>
           </div>
           <div class="form-check">
-            <input name="goals" id="check6" class="form-check-input" type="checkbox" value="improve-general-fitness" />
+            <input name="goals" id="check6" class="form-check-input top3" type="checkbox"
+              value="improve-general-fitness" />
             <label class="form-check-label" for="check6">Improve general fitness</label>
           </div>
           <div class="form-check">
-            <input name="goals" id="check7" class="form-check-input" type="checkbox" value="decrease-body-fat" />
+            <input name="goals" id="check7" class="form-check-input top3" type="checkbox" value="decrease-body-fat" />
             <label class="form-check-label" for="check7">Decrease body fat</label>
           </div>
           <div class="form-check">
-            <input name="goals" id="check8" class="form-check-input" type="checkbox"
+            <input name="goals" id="check8" class="form-check-input top3" type="checkbox"
               value="prepare-for-a-race/challenge" />
             <label class="form-check-label" for="check8">Prepare for a race / challenge</label>
           </div>
           <div class="form-check">
-            <input name="goals" id="check9" class="form-check-input" type="checkbox" value="lose-weight" />
+            <input name="goals" id="check9" class="form-check-input top3" type="checkbox" value="lose-weight" />
             <label class="form-check-label" for="check9">Lose weight</label>
           </div>
           <div class="form-check">
-            <input name="goals" id="check9" class="form-check-input" type="checkbox" value="sleep-better" />
+            <input name="goals" id="check9" class="form-check-input top3" type="checkbox" value="sleep-better" />
             <label class="form-check-label" for="check9">Sleep better</label>
           </div>
           <div class="form-check">
-            <input name="goals" id="check10" class="form-check-input" type="checkbox" value="feel-more-confident" />
+            <input name="goals" id="check10" class="form-check-input top3" type="checkbox"
+              value="feel-more-confident" />
             <label class="form-check-label" for="check10">Feel more confident</label>
           </div>
           <div class="form-check">
-            <input name="goals" id="check11" class="form-check-input" type="checkbox" value="reduce-stress" />
+            <input name="goals" id="check11" class="form-check-input top3" type="checkbox" value="reduce-stress" />
             <label class="form-check-label" for="check11">Reduce stress</label>
           </div>
           <div class="form-check">
-            <input name="goals" id="check12" class="form-check-input" type="checkbox" value="Other" />
+            <input name="goals" id="check12" class="form-check-input top3" type="checkbox" value="Other" />
             <label class="form-check-label" for="check12">Other</label>
           </div>
         </div>
